--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hello">hello , %1$s</string>
     <string name="wallpaperimage">wallpaperimage</string>
+    <string name="create_product">create product</string>
+    <string name="update">Update</string>
 </resources>
