feat: Implement Stock News feature with MVVM, Room, and WorkManager (placeholder)
This commit introduces a new feature to display stock news, incorporating MVVM architecture, Room for local data persistence, and foundational elements for future WorkManager integration.

**Core Functionality:**

- **Stock News Display:**
    - Fetches stock news from an API (`https://stock.indianapi.in/news`).
    - Displays news articles in a RecyclerView using `StockNewsAdapter`.
    - Shows a progress bar while loading data.
- **Offline Support:**
    - Saves fetched news to a local Room database (`stock_news` table).
    - Loads news from the database if the device is offline.
- **MVVM Architecture:**
    - `NewsModel`: ViewModel responsible for fetching and managing news data.
    - `NewsRepository`: Handles data retrieval from API and Room database.
    - `NewsViewModelFactory`: Factory for creating `NewsModel` instances.
    - `Resources` sealed class: Manages data states (Loading, Success, Error) for news.
- **Network Handling:**
    - `NetworkUtils`: Checks for internet connectivity.
    - `ConnectionState` sealed class: Represents network availability.
    - Adapts data fetching based on network status.

**Key Components:**

- **API Integration:**
    - `RetrofitClient`: Singleton for Retrofit instance.
    - `NewsApiService`: Defines API endpoints for fetching news.
    - `StockNewsItem`, `StockNews`: Data models for API response.
- **Database:**
    - `RoomDb`: Abstract class for Room database.
    - `StockNewsDao`: Data Access Object for `stock_news` table.
    - `Converters`: Type converters for Room (e.g., for `List<String>`, `Category`).
- **UI:**
    - `StockNewsActivity`: Displays the list of news articles.
    - `activity_stock_news.xml`: Layout for the news screen.
    - `item_news_list.xml`: Layout for individual news items in the RecyclerView.
- **Application Class:**
    - `ProductApplication`: Initializes `NewsRepository` (and `ProductRepository`).

**Product 

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="wallpaperimage">wallpaperimage</string>
     <string name="create_product">create product</string>
     <string name="update">Update</string>
+    <string name="news">Latest Stock News</string>
+    <string name="todo">TODO</string>
 </resources>
